name:                bassbull
version:             0.1.0.0
synopsis:            Processing some csv data
description:         Baseball data analysis
homepage:            https://github.com/sassela/bassbull#readme
license:             BSD3
license-file:        LICENSE
author:              Abby Sassel
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable bassbull
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , vector
                     , cassava
  default-language:    Haskell2010
